更新index，新加mylog，新加about-github-pages的翻译

--- a/mylog.html
+++ b/mylog.html
@@ -734,9 +734,9 @@ footer {
 
 
  :root {--mermaid-font-zoom:1.44em ;} 
-</style><title>index</title>
+</style><title>mylog</title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='centerindexcenter'><center><strong><span>Index</span></strong></center></h1><p>&nbsp;</p><p><a href='./mylog.html'><span>mylog</span></a></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p></div></div>
+<div id='write'  class=''><center>**mylog**</center><p>&nbsp;</p><blockquote><p><span>2021-07-06</span></p><p><span>	</span><span>创建 </span><code>/github/pages/getting-started-with-github-pages</code><span> 目录</span></p><p><span>	</span><span>将翻译后的</span><a href=''><span>《About GitHub Pages》</span></a><span>放置在本目录下</span></p></blockquote><blockquote><p><span>2021-07-06</span></p><p><span>	</span><span> 翻译 </span><a href=''><span>《About GitHub Pages》</span></a></p></blockquote><p>&nbsp;</p></div></div>
 </body>
 </html>
