添加了about-github-pages翻译的链接地址

--- a/mylog.html
+++ b/mylog.html
@@ -737,6 +737,6 @@ footer {
 </style><title>mylog</title>
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><center>**mylog**</center><p>&nbsp;</p><blockquote><p><span>2021-07-06</span></p><p><span>	</span><span>创建 </span><code>/github/pages/getting-started-with-github-pages</code><span> 目录</span></p><p><span>	</span><span>将翻译后的</span><a href=''><span>《About GitHub Pages》</span></a><span>放置在本目录下</span></p></blockquote><blockquote><p><span>2021-07-06</span></p><p><span>	</span><span> 翻译 </span><a href=''><span>《About GitHub Pages》</span></a></p></blockquote><p>&nbsp;</p></div></div>
+<div id='write'  class=''><h1 id='centermylogcenter'><center><span>mylog</span></center></h1><p>&nbsp;</p><blockquote><p><span>2021-07-06</span></p><p><span>	</span><span>创建 </span><code>/github/pages/getting-started-with-github-pages</code><span> 目录</span></p><p><span>	</span><span>将翻译后的</span><a href='./github/pages/getting-started-with-github-pages/about-github-pages.html'><span>《About GitHub Pages》</span></a><span>放置在本目录下</span></p></blockquote><blockquote><p><span>2021-07-06</span></p><p><span>	</span><span> 翻译</span><a href='./github/pages/getting-started-with-github-pages/about-github-pages.html'><span>《About GitHub Pages》</span></a></p></blockquote><p>&nbsp;</p></div></div>
 </body>
 </html>
